# minirollinghash

./: Cargo.toml  README.md
src/: adler.rs  cyclic_poly.rs  lib.rs  rsync.rs
