[package]
name = "minirollinghash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
adler = []
cyclic_poly = []
rsync = []

[dependencies]
miniunchecked = { path = "../miniunchecked" }
miniunsigned = { path = "../miniunsigned" }

[dev-dependencies]
adler32 = "1.2.*"
cyclic-poly-23 = "0.3.*"
rand = { version = "0.8.*", features = ["small_rng"] }